--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -98,8 +98,10 @@ pallet-uniques = { version = "4.0.0-dev", default-features = false, git = 'https
 pallet-vesting = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
 
 
-pallet-template = { version = '3.0.0-monthly-2021-09+1', default-features = false, path = '../pallets/template' }
+pallet-propagation = { version = '3.0.0-monthly-2021-09+1', default-features = false, path = '../pallets/propagation' }
 pallet-relayer = { version = '3.0.0-monthly-2021-09+1', default-features = false, path = '../pallets/relayer' }
+pallet-slashing = { version = '3.0.0-monthly-2021-09+1', default-features = false, path = '../pallets/slashing' }
+pallet-constraints = { version = '3.0.0-monthly-2021-09+1', default-features = false, path = '../pallets/constraints' }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
@@ -121,6 +123,7 @@ std = [
 	"scale-info/std",
 	"pallet-collective/std",
 	"pallet-contracts/std",
+	"pallet-constraints/std",
 	"pallet-contracts-primitives/std",
 	"pallet-contracts-rpc-runtime-api/std",
 	"pallet-democracy/std",
@@ -131,7 +134,7 @@ std = [
 	"pallet-im-online/std",
 	"pallet-indices/std",
 	"sp-inherents/std",
-	"pallet-template/std",
+	"pallet-propagation/std",
 	"pallet-relayer/std",
 	"pallet-lottery/std",
 	"pallet-membership/std",
@@ -139,6 +142,7 @@ std = [
 	"pallet-multisig/std",
 	"pallet-identity/std",
 	"pallet-scheduler/std",
+	"pallet-slashing/std",
 	"node-primitives/std",
 	"sp-offchain/std",
 	"pallet-offences/std",
