--- a/pallets/relayer/Cargo.toml
+++ b/pallets/relayer/Cargo.toml
@@ -4,7 +4,7 @@ version = '3.0.0'
 description = 'FRAME pallet template for defining custom runtime logic.'
 authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
 homepage = 'https://substrate.dev'
-edition = '2018'
+edition = '2021'
 license = 'Unlicense'
 publish = false
 repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
@@ -21,20 +21,20 @@ version = '2.0.0'
 [dependencies.frame-benchmarking]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 optional = true
 version = '4.0.0-dev'
 
 [dependencies.frame-support]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.frame-system]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.scale-info]
@@ -45,23 +45,23 @@ version = '1.0'
 [dev-dependencies.sp-core]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dev-dependencies.sp-io]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sp-runtime]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies]
-sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", rev = "558a68f8328a004f153496a192c3ac9723c763c3", default-features = false }
+sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
 
 [features]
 default = ['std']
