--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -2,7 +2,7 @@
 authors = ['Substrate DevHub <https://github. Fm/substrate-developer-hub>']
 build = 'build.rs'
 description = 'A fresh FRAME-based Substrate node, ready for hacking.'
-edition = '2018'
+edition = '2021'
 homepage = 'https://substrate.dev'
 license = 'AGPL-3.0-or-later'
 name = 'node-template'
@@ -18,33 +18,33 @@ name = 'node-template'
 
 [build-dependencies.substrate-build-script-utils]
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '3.0.0'
 
 [dependencies]
 jsonrpc-core = '18.0.0'
 structopt = '0.3.8'
-grandpa-primitives = { version = "4.0.0-dev", package = "sp-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
+grandpa-primitives = { version = "4.0.0-dev", package = "sp-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 hex-literal = "0.3.1"
-pallet-im-online = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sc-chain-spec = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
+pallet-im-online = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-chain-spec = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 serde = { version = "1.0.126", features = ["derive"] }
-sp-authority-discovery = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sp-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
+sp-authority-discovery = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 rand = "0.7.2"
-sc-sync-state-rpc = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
+sc-sync-state-rpc = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 futures = "0.3.16"
-node-executor = { version = "3.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sc-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sc-network = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-node-rpc = { version = "3.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sc-consensus-slots = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sp-transaction-storage-proof = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sc-authority-discovery = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sp-authorship = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sc-consensus-uncles = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
+node-executor = { version = "3.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-consensus-babe = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-network = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+grandpa = { version = "0.10.0-dev", package = "sc-finality-grandpa", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+node-rpc = { version = "3.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-consensus-slots = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-transaction-storage-proof = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-authority-discovery = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-authorship = { version = "4.0.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sc-consensus-uncles = { version = "0.10.0-dev", git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 
 [dependencies.node-template-runtime]
 path = '../runtime'
@@ -52,130 +52,130 @@ version = '3.0.0-monthly-2021-09+1'
 
 [dependencies.frame-benchmarking]
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.frame-benchmarking-cli]
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.pallet-transaction-payment-rpc]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sc-basic-authorship]
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sc-cli]
 features = ['wasmtime']
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sc-client-api]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sc-consensus]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sc-consensus-aura]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sc-executor]
 features = ['wasmtime']
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sc-keystore]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sc-rpc]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sc-rpc-api]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sc-service]
 features = ['wasmtime']
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sc-telemetry]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sc-transaction-pool]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sc-transaction-pool-api]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sp-api]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sp-block-builder]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sp-blockchain]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sp-consensus]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sp-consensus-aura]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '0.10.0-dev'
 
 [dependencies.sp-core]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sp-runtime]
 git = 'https://github.com/paritytech/substrate.git'
- rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+ branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.sp-timestamp]
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.substrate-frame-rpc-system]
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [features]
