--- a/pallets/slashing/Cargo.toml
+++ b/pallets/slashing/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
 description = 'FRAME pallet template for defining custom runtime logic.'
-edition = '2018'
+edition = '2021'
 homepage = 'https://substrate.dev'
 license = 'AGPL-3.0-or-later'
 name = 'pallet-slashing'
@@ -16,19 +16,19 @@ targets = ['x86_64-unknown-linux-gnu']
 [dev-dependencies.sp-core]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dev-dependencies.sp-io]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dev-dependencies.sp-runtime]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.codec]
@@ -40,32 +40,32 @@ version = '2.0.0'
 [dependencies.frame-benchmarking]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 optional = true
 version = '4.0.0-dev'
 
 [dependencies.frame-support]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies.frame-system]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
-rev = "558a68f8328a004f153496a192c3ac9723c763c3"
+branch = "master"
 version = '4.0.0-dev'
 
 [dependencies]
-pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
+pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 pallet-relayer = { version = "3.0.0", default-features = false, path = "../relayer" }
 
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 log = { version = "0.4.0", default-features = false }
-sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
-sp-io = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/paritytech/substrate",  rev = "558a68f8328a004f153496a192c3ac9723c763c3"}
+sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-io = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/paritytech/substrate",  branch = "master"}
 lite-json = { version = "0.1", default-features = false }
-sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", rev = "558a68f8328a004f153496a192c3ac9723c763c3" }
+sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [features]
 default = ['std']
