--- a/crypto/etp-lindell17/Cargo.toml
+++ b/crypto/etp-lindell17/Cargo.toml
@@ -5,9 +5,10 @@ edition = "2021"
 
 [dependencies]
 #num-bigint = { version = "0.4", features = ["rand"] }
-rand = "0.8"
-k256 = { version = "0.9.6", features = ["ecdsa", "arithmetic"] }
+rand = { version = "0.8", default-features = false, optional = true } # , features = [ "std_rng"]}
+k256 = { version = "0.9.6", default-features = false, features = ["ecdsa", "arithmetic"] }
 
 [features]
 std = [  ]
 default = [ ]
+party_one = ["rand"]
