--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -3,7 +3,7 @@ authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
 edition = '2021'
 homepage = 'https://substrate.dev'
 license = 'AGPL-3.0-or-later'
-name = 'node-template-runtime'
+name = 'entropy-runtime'
 publish = false
 repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
 version = '3.0.0-monthly-2021-10'
