--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,9 @@ panic = 'unwind'
 
 [workspace]
 members = [
+    'crypto/*',
     'node/*',
-	'pallets/*',
+    'pallets/*',
     'runtime',
-	'subxttest'
+    'subxttest'
 ]
