--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,10 @@ jobs:
       - uses: actions/checkout@v2
       - run: sh .github/workflows/scripts/install_dependencies.sh
       - run: SKIP_WASM_BUILD=1 cargo check --release
-
-#       - name: Check Build for Benchmarking
-#         run: >
-#           pushd node &&
-#           cargo check --features=runtime-benchmarks --release
+  benchmark:
+    name: Benchmark
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - run: sh .github/workflows/scripts/install_dependencies.sh
+      - run: pushd node && cargo check --features=runtime-benchmarks --release
