--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,16 +9,16 @@ on:
 
 jobs:
   check:
-    name: Check
+    name: Compile
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - run: sh .github/workflows/scripts/install_dependencies.sh
+      - run: bash .github/workflows/scripts/install_dependencies.sh
       - run: SKIP_WASM_BUILD=1 cargo check --release
   benchmark:
     name: Benchmark
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - run: sh .github/workflows/scripts/install_dependencies.sh
+      - run: bash .github/workflows/scripts/install_dependencies.sh
       - run: pushd node && cargo check --features=runtime-benchmarks --release
