--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -8,3 +8,7 @@ edition = "2021"
 [dependencies]
 multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
 clap = {version = "3.0.14", features = ["derive"]}
+anyhow = "1.0.53"
+tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread"] }
+futures = "0.3"
+round-based = { version = "0.1.4", features = ["dev"] }
