Add [workspace] moniker

--- a/crypto/etp-lindell17/Cargo.toml
+++ b/crypto/etp-lindell17/Cargo.toml
@@ -12,3 +12,5 @@ k256 = { version = "0.9.6", default-features = false, features = ["ecdsa", "arit
 std = [  ]
 default = [ ]
 party_one = ["rand"]
+
+[workspace]
