--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  check:
-    name: Compile
+  core:
+    name: Core
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
@@ -22,3 +22,10 @@ jobs:
       - uses: actions/checkout@v2
       - run: bash .github/workflows/scripts/install_dependencies.sh
       - run: pushd node && cargo check --features=runtime-benchmarks --release
+  crypto:
+    name: Crypto
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+      - run: bash .github/workflows/scripts/install_dependencies.sh
+      - run: cd crypto/etp-lindell17 && cargo check --release
