--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: bash .github/workflows/scripts/install_dependencies.sh
-      - run: cargo clippy
+      - run: SKIP_WASM_BUILD=1 cargo clippy
   crypto:
     name: Crypto
     runs-on: ubuntu-20.04
