--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -5,6 +5,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "test_sign"
+path = "src/user.rs"
+
 [dependencies]
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
 async-trait = "0.1.51"
