--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
 clap = {version = "3.0.14", features = ["derive"]}
 anyhow = "1.0.53"
-tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread"] }
+tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
 futures = "0.3"
 round-based = { version = "0.1.4", features = ["dev"] }
+serde_json = "1.0"
