--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -7,9 +7,13 @@ edition = "2021"
 
 [dependencies]
 multi-party-ecdsa ={ git = "https://github.com/ZenGo-X/multi-party-ecdsa"}
-clap = {version = "3.0.14", features = ["derive"]}
 anyhow = "1.0.53"
 tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util"] }
 futures = "0.3"
 round-based = { version = "0.1.4", features = ["dev"] }
 serde_json = "1.0"
+structopt = "0.3"
+rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"] }
+surf = "2"
+serde = { version = "1.0", features = ["derive"] }
+async-sse = "5"
