--- a/pallets/slashing/Cargo.toml
+++ b/pallets/slashing/Cargo.toml
@@ -17,19 +17,8 @@ targets = ['x86_64-unknown-linux-gnu']
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = "master"
-version = '4.1.0-dev'
+version = '5.0.0'
 
-[dev-dependencies.sp-io]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '4.0.0-dev'
-
-[dev-dependencies.sp-runtime]
-default-features = false
-git = 'https://github.com/paritytech/substrate.git'
-branch = "master"
-version = '4.0.0-dev'
 
 [dependencies.codec]
 default-features = false
@@ -60,9 +49,10 @@ version = '4.0.0-dev'
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 log = { version = "0.4.0", default-features = false }
 sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-io = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/paritytech/substrate",  branch = "master"}
+sp-io = { version = "5.0.0", default-features = false,  git = "https://github.com/paritytech/substrate",  branch = "master"}
 lite-json = { version = "0.1", default-features = false }
-sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-runtime = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
+sp-application-crypto = { version = "5.0.0", default-features = false,git = "https://github.com/paritytech/substrate", branch = "master" }
 
 [dev-dependencies]
 pallet-session = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
@@ -79,6 +69,7 @@ std = [
     'codec/std',
 	'log/std',
 	"scale-info/std",
+	"sp-application-crypto/std",
     'frame-support/std',
     'frame-system/std',
     'frame-benchmarking/std',
