--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -43,12 +43,14 @@ version = '1.0'
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = "master"
-version = "4.1.0-dev"
+version = "5.0.0"
 
 [dev-dependencies.sp-io]
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = "master"
+version = "5.0.0"
+
 
 [dev-dependencies.sp-runtime]
 default-features = false
@@ -57,7 +59,7 @@ branch = "master"
 
 [dependencies]
 pallet-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
-sp-runtime = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-runtime = { version = "5.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 
 [dev-dependencies]
 pallet-balances = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
