--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -5,9 +5,13 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+name = "protocol"
+path = "src/lib.rs"
+
 [[bin]]
-name = "test_sign"
-path = "src/user.rs"
+name = "cli"
+path = "src/cli/main.rs"
 
 [dependencies]
 async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
