work on registration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ panic = 'unwind'
 members = [
     'crypto/protocol',
     'crypto/signing-client',
+    'crypto/testing-user-clients',
     'node/*',
     'pallets/*',
     'runtime',
