add endpoint to offchain worker api pass (#110)
* add endpoint to offchain worker api pass

* add local id find to offchain worker and http call

* pull address from babe keystore

* encode and decode ocw

* is_block_author

* add negative tests block author

* decoding ocw message

* test to work with running chain

* integrate

* added endpoint on build and get endpoint

* spin chain on tests signing cli

* clean up

* fix tests

* fmt

* clean

--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -22,6 +22,13 @@ tokio = { version = "1.16", features = ["macros","fs","rt-multi-thread","io-util
 serde = { version = "1.0", features = ["derive"] }
 surf = "2"
 
+[dev-dependencies]
+sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
+project-root = "0.2.2"
+sp-core = { version = "4.1.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+env_logger = "0.9.0"
+log = "0.4.14"
+which = "4.0.2"
 
 [features]
 default = ['std']
