--- a/pallets/propagation/Cargo.toml
+++ b/pallets/propagation/Cargo.toml
@@ -59,6 +59,7 @@ version = '4.0.0-dev'
 [dependencies]
 pallet-authorship = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 pallet-relayer = { version = "3.0.0", default-features = false, path = "../relayer" }
+pallet-staking-extension = { version = "3.0.0", default-features = false, path = "../staking" }
 
 scale-info = { version = "1.0", default-features = false, features = ["derive"] }
 log = { version = "0.4.0", default-features = false }
@@ -68,12 +69,21 @@ lite-json = { version = "0.1", default-features = false }
 sp-runtime = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate", branch = "master" }
 sp-core = { default-features = false,  git = "https://github.com/paritytech/substrate", branch = "master" }
 common = { path = "../../crypto/common", default-features = false }
+sp-application-crypto = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 
 
 
 [dev-dependencies]
 sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "master" }
 parking_lot = "0.11.2"
+pallet-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-balances = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-staking-reward-curve = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-session = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-babe = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 
 [features]
 default = ['std']
@@ -86,7 +96,11 @@ std = [
     'frame-system/std',
     'frame-benchmarking/std',
 	'pallet-authorship/std',
+	'pallet-staking-extension/std',
+	'pallet-balances/std',
+	'pallet-babe/std',
 	"sp-io/std",
 	"sp-runtime/std",
+	"sp-application-crypto/std",
 ]
 try-runtime = ['frame-support/try-runtime']
