--- a/pallets/staking/Cargo.toml
+++ b/pallets/staking/Cargo.toml
@@ -49,7 +49,7 @@ version = "5.0.0"
 default-features = false
 git = 'https://github.com/paritytech/substrate.git'
 branch = "master"
-version = "4.0.0-dev"
+version = "5.0.0"
 
 [dev-dependencies.sp-runtime]
 default-features = false
