--- a/crypto/signing-client/Cargo.toml
+++ b/crypto/signing-client/Cargo.toml
@@ -10,7 +10,7 @@ rocket = { version = "0.5.0-rc.1", default-features = false, features = ["json"]
 reqwest = { version = "0.9", default-features = false }
 serde_json = "1.0"
 uuid = { version = "0.8", features = ["v4"] }
-parity-scale-codec = "2.3.1"
+parity-scale-codec = "3.0.0"
 common = { path = "../../crypto/common", default-features = false }
 protocol = { path = "../protocol", default-features = false }
 subxt = { git = "https://github.com/paritytech/subxt.git" }
@@ -25,7 +25,7 @@ surf = "2"
 [dev-dependencies]
 sp-keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate/", branch = "master" }
 project-root = "0.2.2"
-sp-core = { version = "5.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-core = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 env_logger = "0.9.0"
 log = "0.4.14"
 which = "4.0.2"
