--- a/crypto/protocol/Cargo.toml
+++ b/crypto/protocol/Cargo.toml
@@ -36,7 +36,7 @@ common = { path = "../../crypto/common", default-features = false }
 
 [dev-dependencies]
 project-root = "0.2.2"
-sp-core = { version = "6.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-core = { version = "6.0.0", default-features = false  }
 env_logger = "0.9.0"
 log = "0.4.14"
 which = "4.0.2"
