--- a/pallets/slashing/Cargo.toml
+++ b/pallets/slashing/Cargo.toml
@@ -61,6 +61,8 @@ frame-election-provider-support  = { version = "4.0.0-dev", default-features = f
 pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 pallet-staking = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 pallet-balances = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
+sp-npos-elections = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/paritytech/substrate.git', branch = "master" }
 
 [features]
 default = ['std']
@@ -75,5 +77,8 @@ std = [
     'frame-benchmarking/std',
 	"sp-io/std",
 	"sp-runtime/std",
+	"sp-npos-elections/std",
+	"pallet-staking/std",
+	"pallet-balances/std"
 ]
 try-runtime = ['frame-support/try-runtime']
